# local-proprag

./: .gitignore  pyproject.toml
examples/: README.md  config.json  graph.db  graph.db.wal  quickstart-rag.py  quickstart.py  test_data.py
src/local_proprag/: __init__.py  chunker.py  extractor.py  graphdb.py  llm.py  proprag.py  vectordb.py
